Adds title and icons w/ links.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1>Nick Stecyna</h1>
+							<p>Binghamton University Undergraduate</p>
+							<p>Computer Science Major</p>
 						</header>
 						<!--
 						<hr />
@@ -66,9 +67,11 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://github.com/nstecyna" class="fa-github-square">GitHub</a></li>
+								<li><a href="mailto:nstecyn1@binghamton.edu" class="fa-envelope-o">Email</a></li>
+								<li><a href="https://docs.google.com/document/d/1_77jmWo076cGozXAYWl11CupvN70oSV_gMr2j5rDUI0/edit?usp=sharing" class="fa-file-text-o">Resume</a></li>
+								<li><a href="https://www.linkedin.com/in/nicholas-stecyna-265979149/" class="fa-linkedin-square">LinkedIn</a></li>
+
 							</ul>
 						</footer>
 					</section>
