Adds profile and background images.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/StecynaSquareShot.jpg" alt="" /></span>
 							<h1>Nick Stecyna</h1>
 							<p>Binghamton University Undergraduate</p>
 							<p>Computer Science Major</p>
