Updated resume to a pdf file.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<ul class="icons">
 								<li><a href="https://github.com/nstecyna" class="fa-github-square">GitHub</a></li>
 								<li><a href="mailto:ndstecyna@gmail.com" class="fa-envelope-o">Email</a></li>
-								<li><a href="https://docs.google.com/document/d/1_77jmWo076cGozXAYWl11CupvN70oSV_gMr2j5rDUI0/edit?usp=sharing" class="fa-file-text-o">Resume</a></li>
+								<li><a href="documents/Nicholas D Stecyna Resume.pdf" class="fa-file-text-o">Resume</a></li>
 								<li><a href="https://www.linkedin.com/in/nicholas-stecyna-265979149/" class="fa-linkedin-square">LinkedIn</a></li>
 
 							</ul>
