--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 							<ul class="icons">
 								<li><a href="https://github.com/nstecyna" class="fa-github-square">GitHub</a></li>
 								<li><a href="mailto:ndstecyna@gmail.com" class="fa-envelope-o">Email</a></li>
-								<li><a href="documents/Nicholas D Stecyna Resume.pdf" class="fa-file-text-o">Resume</a></li>
-								<li><a href="https://www.linkedin.com/in/nicholas-stecyna-265979149/" class="fa-linkedin-square">LinkedIn</a></li>
+								<li><a href="documents/resume-cs.pdf" class="fa-file-text-o">Resume</a></li>
+								<li><a href="https://www.linkedin.com/in/nstecyna/" class="fa-linkedin-square">LinkedIn</a></li>
 
 							</ul>
 						</footer>
