Changed title and name to Nicholas Stecyna.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Nicholas Stecyna</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -24,7 +24,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/StecynaSquareShot.jpg" alt="" /></span>
-							<h1>Nick Stecyna</h1>
+							<h1>Nicholas Stecyna</h1>
 							<p>Binghamton University Undergraduate</p>
 							<p>Computer Science Major</p>
 						</header>
