updated email and resume

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/nstecyna" class="fa-github-square">GitHub</a></li>
-								<li><a href="mailto:nstecyn1@binghamton.edu" class="fa-envelope-o">Email</a></li>
+								<li><a href="mailto:ndstecyna@gmail.com" class="fa-envelope-o">Email</a></li>
 								<li><a href="documents/NicholasStecynaResume.pdf" class="fa-file-text-o">Resume</a></li>
 								<li><a href="https://www.linkedin.com/in/nstecyna/" class="fa-linkedin-square">LinkedIn</a></li>
 
